--- a/css/main.css
+++ b/css/main.css
@@ -143,6 +143,9 @@ button {
 	width: 106px;
 
 	cursor: pointer;
+
+	color: var(--primary_black);
+	text-decoration: none;
 }
 
 .header_lower_navbar_button_container.active {
@@ -155,6 +158,7 @@ button {
 	justify-content: center;
 
 	gap: 8px;
+	pointer-events: none;
 }
 
 .page_wrapper {
